--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /ethermancer-dashboard/ethermancer-dashboard-backend/database.json
 /ethermancer-dashboard/ethermancer-dashboard-frontend/dist
 /ethermancer-dashboard/ethermancer-dashboard-frontend/.angular
+/ethermancer-dashboard/ethermancer-dashboard-frontend/node_modules
