--- a/ethermancer-dashboard/ethermancer-dashboard-frontend/package.json
+++ b/ethermancer-dashboard/ethermancer-dashboard-frontend/package.json
@@ -25,7 +25,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@ng-bootstrap/ng-bootstrap": "^15.1.1",
     "@popperjs/core": "^2.11.6",
+    "angular-highcharts": "^16.0.0",
     "bootstrap": "^5.2.3",
+    "highcharts": "^11.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
