--- a/ethermancer-dashboard/ethermancer-dashboard-frontend/package.json
+++ b/ethermancer-dashboard/ethermancer-dashboard-frontend/package.json
@@ -28,6 +28,7 @@
     "angular-highcharts": "^16.0.0",
     "bootstrap": "^5.2.3",
     "highcharts": "^11.1.0",
+    "jwt-decode": "^3.1.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
