--- a/ethermancer-dashboard/ethermancer-dashboard-frontend/angular.json
+++ b/ethermancer-dashboard/ethermancer-dashboard-frontend/angular.json
@@ -26,10 +26,16 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ],
+            "allowedCommonJsDependencies": [
+              "highcharts",
+              "highcharts/highcharts-gantt",
+              "highcharts/highmaps",
+              "highcharts/highstock"
             ]
           },
           "configurations": {
@@ -90,7 +96,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.min.js"
