--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /ethermancer-dashboard/ethermancer-dashboard-frontend/dist
 /ethermancer-dashboard/ethermancer-dashboard-frontend/.angular
 /ethermancer-dashboard/ethermancer-dashboard-frontend/node_modules
+/ethermancer-dashboard/ethermancer-dashboard-backend/.env
