--- a/ethermancer-dashboard/ethermancer-dashboard-backend/.env
+++ b/ethermancer-dashboard/ethermancer-dashboard-backend/.env
@@ -1,22 +1,3 @@
-# POSTGRES_HOST=awseb-e-yttucbsbqj-stack-awsebrdsdatabase-jv8b49vmwt3i.cxindoou3tc6.us-east-1.rds.amazonaws.com
-# POSTGRES_DB=postgres
-# POSTGRES_USER=postgres
-# POSTGRES_PASSWORD=postgresDb
-
-
-# POSTGRES_DB_TEST=postgres
-# ENV=dev
-# BCRYPT_PASSWORD=your-secret-password 
-# SALT_ROUNDS=10
-# TOKEN_SECRET=alohomora123!
-# PORT=3000
-
-
-# POSTGRES_HOST=udacity-database-2.cxindoou3tc6.us-east-1.rds.amazonaws.com
-# POSTGRES_DB=postgres
-# POSTGRES_USER=postgres
-# POSTGRES_PASSWORD=postgresDb
-
 POSTGRES_HOST=127.0.0.1
 POSTGRES_DB=dbtest_test
 POSTGRES_DB_TEST=dbtest_test
@@ -27,14 +8,13 @@ BCRYPT_PASSWORD=your-secret-password
 SALT_ROUNDS=10
 TOKEN_SECRET=alohomora123!
 
-# POSTGRES_HOST=127.0.0.1
-# POSTGRES_DB=dbtest
-# POSTGRES_USER=postgres
-# POSTGRES_PASSWORD=1967
-
+# POSTGRES_HOST=awseb-e-3mtyg4kav4-stack-awsebrdsdatabase-tvwpk4wkcpzo.cxindoou3tc6.us-east-1.rds.amazonaws.com
+# POSTGRES_DB=dbtest_test
 # POSTGRES_DB_TEST=dbtest_test
+# POSTGRES_USER=postgres
+# POSTGRES_PASSWORD=Test1967
 # ENV=dev
 # BCRYPT_PASSWORD=your-secret-password 
 # SALT_ROUNDS=10
 # TOKEN_SECRET=alohomora123!
-# PORT=3000
+
