--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,11 +21,16 @@ jobs:
           name: Upload to S3
           command: aws s3 cp application.zip s3://awstestbucketfordb/application.zip
       - run:
+          name: Define Version Label
+          command: echo "export VERSION_LABEL=v$(date +%Y%m%d%H%M%S)" >> $BASH_ENV
+      - run:
           name: Deploy to Elastic Beanstalk
-          command: aws elasticbeanstalk create-application-version --application-name "AWS-Testumgebung" --version-label "v$(date +%Y%m%d%H%M%S)" --source-bundle S3Bucket="awstestbucketfordb",S3Key="application.zip"
+          command: aws elasticbeanstalk create-application-version --application-name "AWS-Testumgebung" --version-label "$VERSION_LABEL" --source-bundle S3Bucket="awstestbucketfordb",S3Key="application.zip"
       - run:
           name: Update Elastic Beanstalk Environment
-          command: aws elasticbeanstalk update-environment --environment-name "AWS-Testumgebung-env" --version-label "v$(date +%Y%m%d%H%M%S)"
+          command: |
+            sleep 20  # Kurze Wartezeit
+            aws elasticbeanstalk update-environment --environment-name "AWS-Testumgebung-env" --version-label "$VERSION_LABEL"
   build-and-deploy-dashboard:
     docker:
       - image: cimg/node:18.18.2
