--- a/ethermancer-dashboard/ethermancer-dashboard-backend/.env
+++ b/ethermancer-dashboard/ethermancer-dashboard-backend/.env
@@ -1,8 +1,9 @@
-POSTGRES_HOST=127.0.0.1
-POSTGRES_DB=dbtest_test
-POSTGRES_DB_TEST=dbtest_test
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=1967
+DB_HOST=database-1.cxindoou3tc6.us-east-1.rds.amazonaws.com
+DB_PORT=5432
+DB_DATABASE=postgres
+DB_USER=postgres
+DB_PASSWORD=postgresDB
+
 ENV=dev
 BCRYPT_PASSWORD=your-secret-password 
 SALT_ROUNDS=10
