--- a/ethermancer-dashboard/ethermancer-dashboard-backend/package.json
+++ b/ethermancer-dashboard/ethermancer-dashboard-backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "prettier": "prettier --config .prettierrc \"*.js\" \"handlers/**/*.js\" \"models/**/*.js\" --write"
   },
   "keywords": [],
   "author": "",
@@ -17,5 +18,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3"
+  },
+  "devDependencies": {
+    "prettier": "^3.1.0"
   }
 }
