--- a/ethermancer-dashboard/ethermancer-dashboard-backend/package.json
+++ b/ethermancer-dashboard/ethermancer-dashboard-backend/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "prettier": "prettier --config .prettierrc \"*.js\" \"handlers/**/*.js\" \"models/**/*.js\" --write"
+    "prettier": "prettier --config .prettierrc \"*.js\" \"handlers/**/*.js\" \"models/**/*.js\" --write",
+    "lint": "eslint . --ext .js"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,7 @@
     "pg": "^8.11.3"
   },
   "devDependencies": {
+    "eslint": "^8.54.0",
     "prettier": "^3.1.0"
   }
 }
