--- a/ethermancer-dashboard/ethermancer-dashboard-backend/package.json
+++ b/ethermancer-dashboard/ethermancer-dashboard-backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "prettier": "prettier --config .prettierrc \"*.js\" \"handlers/**/*.js\" \"models/**/*.js\" --write",
-    "lint": "eslint . --ext .js"
+    "lint": "eslint . --ext .js",
+    "test": "jasmine"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +23,8 @@
   },
   "devDependencies": {
     "eslint": "^8.54.0",
-    "prettier": "^3.1.0"
+    "jasmine": "^5.1.0",
+    "prettier": "^3.1.0",
+    "supertest": "^6.3.3"
   }
 }
