--- a/ethermancer-website/package.json
+++ b/ethermancer-website/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^16.1.0",
     "@fortawesome/fontawesome-free": "^6.0.0",
     "@ng-bootstrap/ng-bootstrap": "^15.1.1",
+    "angular-bootstrap-md": "^15.0.0",
     "angulartics2": "^12.2.1",
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.11.0",
