--- a/ethermancer-website/package.json
+++ b/ethermancer-website/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/fontawesome-free": "^6.0.0",
     "@ng-bootstrap/ng-bootstrap": "^15.1.1",
     "angulartics2": "^12.2.1",
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.11.0",
     "chart.js": "^3.1.1",
@@ -37,6 +38,7 @@
     "@angular-devkit/build-angular": "^16.1.8",
     "@angular/cli": "~16.1.8",
     "@angular/compiler-cli": "^16.1.0",
+    "@types/aos": "^3.0.7",
     "@types/jasmine": "~4.3.0",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
